tests/paczka1/fuzzy1/16205917.err
Error in line 5: esJ A691 34,1
Error in line 20: NrGb A819 24,6
Error in line 3: A727 A691 71,4
